cmake_minimum_required(VERSION 3.10)
project(DSACPP)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(Chap5_ArrayList)
add_subdirectory(Chap6_LinkedList)
add_subdirectory(Chap7_Matrix)
add_subdirectory(Chap8_Stack)
add_subdirectory(Chap9_Queue)
add_subdirectory(Chap10_SkipAndHashTable)
add_subdirectory(Chap11_BinaryTree)
add_subdirectory(Chap12_PriorityQueue)
add_subdirectory(Chap13_TouranmentTree)